workspace-sf/force-app/main/default/objects/RemuneracaoContrato__c/RemuneracaoContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o contrato e o tipo de remuneração.</description>
    <label>Remuneração do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remunerações do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>