workspace-sf/force-app/main/default/objects/RemuneracaoContrato__c/fields/BonusCampanha__c.field-meta.xml
<CustomField>
    <fullName>BonusCampanha__c</fullName>
    <label>Bônus da campanha</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>